
	callmonitor-1.17

2010-02-24:

	* callmonitor.sh: Argument --version eingeführt

2010-04-09:

	* modreg: Umstellung auf neue Datei-Registrierung; setzt aktuellen
	Freetz-Trunk voraus.

	callmonitor-1.17.1 für freetz-trunk

2010-04-10:

	* Weboberfläche: Alle internen Links korrigieren

	callmonitor-1.17.2 für freetz-trunk

2010-04-21:

	* reverse: DasTelefonbuch und GoYellow angepasst

2010-05-14:

	callmonitor-1.17.3 für freetz-trunk

2010-05-22:

	* samsung.sh: Nachrichten an bestimmte TV-Geräte von Samsung (via SOAP)

2010-05-24:

	callmonitor-1.18

	* goyellow.sh: Wieder verändert; erneut repariert.

2010-06-13:

	* samsung.sh: Bei der Aktion 'samsung' waren Quelle und Ziel
	vertauscht.

2010-06-20:

	* webui.sh: Robustere Implementierung von webui_get

2010-06-24:

	callmonitor-1.18.1

2010-07-24:

	* local_ch.sh: 2. Schweizer Rückwärtssuche: tel.local.ch
	* goyellow.sh: Rückwärtssuche bei GoYellow angepasst

	callmonitor-1.18.2

2010-08-02:

	* reverse.cgi.sh: Make saving work (adapt to Freetz changes)

	callmonitor-1.18.3

2010-08-06:

	* herold_at.sh: Neue Rückwärtssuche für Österreich (beta)

	callmonitor-1.18.4

	* telefonbuch_at.sh: O.Ö. Telefonbuchverlag hat seinen Server umbenannt:
	  www.das-telefonbuch.at => www.dasschnelle.at

	* herold_at.sh: Umlaute wurden verschluckt

	callmonitor-1.18.5

2010-08-27:

	* reverse.cgi.sh: Make saving work (adapt to Freetz changes)

	callmonitor-1.18.6

2010-09-24:

	* modreg daemon: Anpassung an Freetz
	* allcfgconv -e: Robusteres Auslesen der Konfiguration bei einigen
	Labor-Firmwares

	callmonitor-1.18.7

2010-11-27:

	* billiger.sh: Neue Fallback-Suche billiger-telefonieren.de statt Google
	* search_ch.sh: Schweizer Rückwärtssuche repariert

	callmonitor-1.18.8

2011-01-14:

	* pronto_it.sh: Rückwärtssuche für Italien

2011-02-05:

	* telefonbuch.sh: Rückwärtssuche repariert ("Karte Zusatzinfo" aus
	  Antwort entfernt)
	* goyellow.sh: Fehlschlagende Suchen repariert

	callmonitor-1.19